<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold|normal" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/select"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/easy"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/easy"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="6dp"
            android:background="@drawable/shapestry"
            android:gravity="center"

            ></TextView>

        <TextView
            android:id="@+id/med"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/med"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="6dp"
            android:background="@drawable/shapestry"
            android:gravity="center"

            ></TextView>

        <TextView
            android:id="@+id/hard"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/hard"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="6dp"
            android:background="@drawable/shapestry"
            android:gravity="center"

            ></TextView>

        <TextView
            android:id="@+id/highscores"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="6dp"
            android:text="@string/highscores"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@drawable/shapestry"
            android:gravity="center"

            ></TextView>

    </LinearLayout>


</RelativeLayout>